# Mobile-Robot

another/experiment_02/: CMakeLists.txt  final_test_1.cpp  package.xml
another/experiment_02/launch/: robo_2_0.launch  robo_2_2_simulation.launch
another/experiment_02/src/: robo_2_0.cpp  robo_2_1 _copy.cpp  robo_2_1.cpp  robo_2_2.cpp  write_read.cpp
another/experiment_03/: CMakeLists.txt  package.xml  rivz_cfg.rviz
another/experiment_03/launch/: movetoTargetplace_simulation.launch  robo_03_0_simulation.launch  robo_03_1_simulation.launch  robo_03_2_simulation.launch  robo_03_camera_simulation.launch  robo_03_joystick_simulation.launch
another/experiment_03/src/: movetoTargetplace.cpp  robo_03_0.cpp  robo_03_camera.cpp  robo_03_camera2.cpp  robo_03_joystick.cpp
another/final_mini_project/: CMakeLists.txt  package.xml
another/final_mini_project/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
another/final_mini_project/launch/: final_test_2.launch  final_test_2_simulation.launch  move_base.launch  robo_2_0_simulation.launch  simple_navigation.launch
another/final_mini_project/src/: final_test_2.cpp  final_test_2COP.cpp  robo_2_1.cpp  robo_4_6.cpp  simple_navigation_goals.cpp
experiment_01/: CMakeLists.txt  package.xml
experiment_01/launch/: robo_01_roomrider.launch  robo_04_roomrider.launch
experiment_01/src/: robo_01.cpp  robo_02.cpp  robo_03.cpp
experiment_03/launch/: robo_3_2_simulation.launch
experiment_03/src/: robo_3_1.cpp
experiment_05/: CMakeLists.txt  package.xml
experiment_05/launch/: robo_5_0_roomrider.launch  robo_5_0_simulation.launch
experiment_05/src/: robo_5_0.cpp
final_mini_project/: CMakeLists.txt  amcl.rviz  package.xml
final_mini_project/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
final_mini_project/launch/: my_robot_configuration.launch  simple_navigation.launch
final_mini_project/src/: simple_navigation_goals.cpp
